<resources>
    <string name="app_name">app0111</string>
    <string name="btnSqlite">SQL 라이트 사용하기</string>
    <string name="btnInsert">추가</string>
    <string name="btnUpdate">수정</string>
    <string name="btnDelete">삭제</string>
    <string name="btnSelect">조회</string>
    <string name="btnSelectAll">전체검색</string>
    <string name="btnFiles">파일 사용하기</string>
    <string name="btnSystemFileWrite">내장 메모리에 파일 저장</string>
    <string name="btnSystemInFileRead">내장 메모리에서 파일 읽기</string>
    <string name="btnSystemOutFileWrite">외부 저장소 파일 저장</string>
    <string name="btnSystemOutFileRead">외부 저장소 파일 읽기</string>
</resources>