<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSystemFileWrite"
        android:id="@+id/btnSystemInFileWrite"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSystemInFileRead"
        android:id="@+id/btnSystemInFileRead"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSystemOutFileWrite"
        android:id="@+id/btnSystemOutFileWrite"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSystemOutFileRead"
        android:id="@+id/btnSystemOutFileRead"/>
</LinearLayout>